force-app/main/default/objects/OCX_CX_Theme__c/OCX_CX_Theme__c.object-meta.xml
<CustomObject>
    <description>Stable top-level CX measurement theme.</description>
    <label>CX Theme</label>
    <nameField>
        <label>Theme Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CX Themes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>