force-app/main/default/objects/OCX_CX_Theme__c/fields/Theme_Key__c.field-meta.xml
<CustomField>
    <fullName>Theme_Key__c</fullName>
    <externalId>true</externalId>
    <label>Theme Key</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>